--- a/docs/_sass/_global.scss
+++ b/docs/_sass/_global.scss
@@ -81,6 +81,13 @@ img {
 	flex: 1;
 }
 
+@media (max-width: 767px) {
+  .container {
+		margin-right: 1.5em;
+		margin-left: 1.5em;
+	}
+}
+
 p {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
